--- a/realtime/docs/用户画像.md
+++ b/realtime/docs/用户画像.md
@@ -58,7 +58,7 @@
 > 3.2 不存在有效年龄
  ```
 根据上述统计出的用户年龄和用户性别，结合权威统计数据,进行用户体重的估算
-读取从kafka过滤到spu_sale_attr,spu_sale_attr_value
+读取从kafka过滤到spu_sale_attr,spu_sale_attr_value,获取相关商品spu的属性值,如衣服鞋类的尺寸，进行计算
 ```
 > 3.3 数据清洗与转换
 ```
@@ -77,5 +77,36 @@
 > 4.2 不存在有效身高
  ```
 根据上述统计出的用户年龄和用户性别，结合权威统计数据,进行用户身高的估算
+读取从kafka过滤到spu_sale_attr,spu_sale_attr_value,获取相关商品spu的属性值,如衣服鞋类的尺寸，进行计算
 ```
-> 4.3 不存在有效身高
+> 4.3 数据清洗
+```
+-- 4.3.1 过滤<100cm或>250cm的异常值
+-- 4.3.2 排除「666」「888」等特殊数字
+-- 4.3.3 过滤非整数数值
+```
+## 5.星座标签
+- 解析星座，用于分析用户的性格特征、消费偏好等画像属性。
+- 输出标签属性值：
+  - 白羊座
+  - 金牛座
+  - 双子座
+  - 巨蟹座
+  - 狮子座
+  - 处女座
+  - 天秤座
+  - 天蝎座
+  - 射手座
+  - 摩羯座
+  - 水瓶座
+  - 双鱼座
+  - 未知
+
+> 5.1 存在有效星座
+```
+从kafka的user_info中获取birthday字段,进行拆分计算
+```
+> 5.2 不存在有效星座
+```
+填写为未知
+```
