--- a/realtime/docs/用户画像.md
+++ b/realtime/docs/用户画像.md
@@ -1,6 +1,38 @@
 # 用户画像
->基础特征包括年龄、性别、年代、身高、体重、星座6类标签
-## 1.用户年龄标签
+## 1.六个基本标签
+>基础特征包括年龄、性别、年代、身高、体重、星座6类标签 
+```
+年龄:读取业务数据kafka,直接对birthday进行计算获取年龄 
+
+性别:读取业务数据kafka,如果有就直接写入,没有设置为home
+
+年代:读取业务数据kafka,直接对birthday,获取出生日期,直接计算获取年代
+
+身高:读取业务数据kafka,过滤出user_info_sup_msg,与user_info进行关联,获取用户身高
+
+体重:读取业务数据kafka,过滤出user_info_sup_msg,与user_info进行关联,获取用户体重
+
+星座:读取业务数据kafka,直接对birthday,获取出生月份,直接计算获取星座
+
+```
+- 流程
+  - 1.1 读取业务数据kafka ,下图是原生的flinkCDC业务数据
+![img_1.png](img_1.png)
+  - 2.2 过滤出user_id表,下图为source中table为user_info的表结构
+  ![img_3.png](img_3.png)
+  - 2.3 对过滤出的user_info表,进行map转换,提取after字段到新json中,并转换birthday日期差值转为年月日
+  ![img_4.png](img_4.png)
+  - 2.4 过滤出user_info_sup_msg,包含用户身高体重数据
+  ![img_5.png](img_5.png)
+  - 2.5 提取user_info表数据,并使用生日计算出年龄年代星座字段
+  ![img_6.png](img_6.png)
+  - 2.6 处理user_info_sup_msg表,提取出需要的字段
+  ![img_7.png](img_7.png)
+  - 2.7 过滤掉user_info和user_info_sup_msg中uid为空的数据,按uid分组,使用intervalJoin进行join
+  ![img_8.png](img_8.png)
+- 2.8 六个基础标签设计完成
+
+## 2.用户购物年龄段标签
 - 根据用户在淘宝平台上
   - 浏览
   - 搜索
@@ -14,99 +46,65 @@
    - 35-39岁
    - 40-49岁
    - 50岁以上。
-> 1.1 存在有效年龄
- ```
-读取业务数据kafka,直接对birthday进行计算获取年龄,存入doris中
-```
+> 1.1 设备和搜索词
+- 流程
+  - 1.1.1 读取日志数据kafka,获取用户行为日志数据,转为JsonObject类型
+  ![img_9.png](img_9.png)
+  - 1.1.2 提取出common中的os和page中的item_type字段,
+  ![img_11.png](img_11.png)
+  - 1.1.3 过滤log中uid为空的字段,按uid分组
+  - 1.1.4 将每个用户数据进行聚合,每个参数的值都设置为set,每个 2 分钟窗口内的所有数据，最终只保留最后一条
+  ![img_12.png](img_12.png)
+  - 1.1.5 使用jdbc读取mysql,直接获取,搜索词对应的品类,设备的处理为多台设备默认ios,只有安卓为安卓
+  - 1.1.6 完成设备和搜索词评分
+  ![img_13.png](img_13.png)
 
 
-> 1.2 不存在有效年龄
- ```
--- 1.2.1 类目偏好、品牌偏好、价格敏感度
-  读取业务数据kafka,使用user_id关联order_info,favor_info,cart_info获取品类及品牌名,以及商品金额,存入doris中
 
--- 1.2.2 时间行为
-  读取日志数据kafka获取页面日志数据,获取用户行为时间,存入doris中
-  读取业务数据kafka,获取order_info,favor_info,cart_info,order_refund_info,user_info的操作时间,存入doris中
 
--- 1.2.3 搜索词分析
-  读取日志数据kafka获取搜索日志数据,获取搜索词,存入doris中
 
--- 1.2.4 设备信息
-  读取日志数据kafka获取common中的md,os,vc字段,存入doris中
+> 1.2 订单品牌,订单类别,订单时间,订单价格
+- 流程
+  - 1.2.1 读取业务数据kafka,过滤出order_info,order_detail表
+![img_20.png](img_20.png)
+![img_21.png](img_21.png)
+  - 1.2.2 过滤掉order_info中json内容完全相同的的数据
+![img_22.png](img_22.png)
+  - 1.2.3 提取order_info中after和ts_ms字段,设置状态算子,取到同一订单号最新的数据,进行去重
+![img_23.png](img_23.png)
+  - 1.2.4 提取order_detail表中的字段order_id,sku_id,order_price,用于join,获取品类和品牌,获取价格区间
+![img_24.png](img_24.png)
+  - 1.2.5 提取order_info表中的id,user_id,create_time,ts_ms字段,用作join,分组,获取订单时间段,水位线
 
--- 1.2.5 社交互动行为
-  暂时找不到社交互动行为
-```
+  - 1.2.6 intervalJoin两表,生成订单数据
+![img_25.png](img_25.png)
+  - 1.2.7 根据sku_id,使用jdbc直接读取mysql,获取到品类和品牌,根据order_price,order_time,获取到订单价格区间和时间区间
 
-## 2.用户性别标签
-- 浏览、收藏、加购、购买等行为 ,结合购买商品的一级品类分布及行为频次
-- 标签分为三类 
-  - 女性用户
-  - 男性用户
-  - 家庭用户
-- 排除干扰行为：若用户存在刷单行为（如短时间内高频浏览/加购非目标品类），需通过异常行为检测模块过滤后，再进行标签计算。
-```
-读取之前分析年龄时存入doris的order_info,favor_info,cart_info数据有一级品类分布,使用物化视图进行聚合计算频次
+  - 1.2.8 进行一个汇总的操作,设置一个mapState,键为价格区间,品牌,品类,时间区间,值为map,map的键为具体分类和出现次数
 
-```
-## 3.用户体重
-> 3.1 存在有效体重
- ```
-数据库中没有体重数据，需要通过其他方式获取
-```
-> 3.2 不存在有效年龄
- ```
-根据上述统计出的用户年龄和用户性别，结合权威统计数据,进行用户体重的估算
-读取从kafka过滤到spu_sale_attr,spu_sale_attr_value,获取相关商品spu的属性值,如衣服鞋类的尺寸，进行计算
-```
-> 3.3 数据清洗与转换
-```
--- 3.3.1 若含“斤”单位，数值除以2（如“120斤”→60kg）；
--- 3.3.2 若含“克”“g”，数值除以1000（如“65000g”→65kg）；
--- 3.3.3 无单位默认“千克”。
--- 3.3.4 异常值过滤：
--- 3.3.5 剔除<30kg（低于儿童最低合理值）或>200kg（成人极端值）的记录；
--- 3.3.6 排除非数值字符（如“50公斤左右”标记为无效）。
-```
-## 4.用户身高
-> 4.1 存在有效身高
- ```
-数据库中没有身高数据，需要通过其他方式获取
-```
-> 4.2 不存在有效身高
- ```
-根据上述统计出的用户年龄和用户性别，结合权威统计数据,进行用户身高的估算
-读取从kafka过滤到spu_sale_attr,spu_sale_attr_value,获取相关商品spu的属性值,如衣服鞋类的尺寸，进行计算
-```
-> 4.3 数据清洗
-```
--- 4.3.1 过滤<100cm或>250cm的异常值
--- 4.3.2 排除「666」「888」等特殊数字
--- 4.3.3 过滤非整数数值
-```
-## 5.星座标签
-- 解析星座，用于分析用户的性格特征、消费偏好等画像属性。
-- 输出标签属性值：
-  - 白羊座
-  - 金牛座
-  - 双子座
-  - 巨蟹座
-  - 狮子座
-  - 处女座
-  - 天秤座
-  - 天蝎座
-  - 射手座
-  - 摩羯座
-  - 水瓶座
-  - 双鱼座
-  - 未知
+  - 1.2.9 进行品牌,品类,价格区间,时间区间进行评分
+![img_26.png](img_26.png)
+  - 1.2.10 设置基本标签流,设备和搜索词评分流,价格区间和品牌和品类和时间区间评分流的水位线
 
-> 5.1 存在有效星座
-```
-从kafka的user_info中获取birthday字段,进行拆分计算
-```
-> 5.2 不存在有效星座
-```
-填写为未知
-```
+  - 1.2.11 intervalJoin设备和搜索词评分流,价格区间和品牌和品类和时间区间评分流,累加所有评分,取到评分最大的年龄段
+
+  - 1.2.12 intervalJoin基本标签流,去掉时间戳字段,避免仅仅因为时间戳不同,导致数据重复,对jsonstr进行去重,最终实现用户画像
+  ![img_14.png](img_14.png)
+## 3 优化点 
+- 1.1 循环代码取代一步一步相加,减少了代码量
+![img_27.png](img_27.png)
+- 1.2 删去时间戳字段,实现去重,避免因为时间戳不同,导致数据重复
+![img_30.png](img_30.png)
+- 1.3 调大idea内存,加快程序运行
+  ![img_17.png](img_17.png)
+
+- 1.4 拆分出方法,增强可读性
+- ![img_31.png](img_31.png)
+- 1.5 使用jdbc直接读取mysql,加快查询速度
+![img_32.png](img_32.png)
+## 4 分层
+- 引入kafka实现分层,减小idea运行压力
+  - 将六个基本标签,设备和搜索评分,价格区间和品牌和品类和时间区间评分,三个流分别写入kafka
+  - 另外写一个类读取kafka,进行join,生成用户画像
+![img_33.png](img_33.png)
+
