--- a/realtime/docs/用户画像.md
+++ b/realtime/docs/用户画像.md
@@ -107,4 +107,12 @@
   - 将六个基本标签,设备和搜索评分,价格区间和品牌和品类和时间区间评分,三个流分别写入kafka
   - 另外写一个类读取kafka,进行join,生成用户画像
 ![img_33.png](img_33.png)
+## 5 难点
+- 去重
+  - 状态算子去重
+  - 布隆过滤器去重
+- 加权算法实现
+- 数据join
+  - intervalJoin
+  - jdbc
 
